Programming Languages/Hw2/part5/t03.output
running e2c
compiling the C generated code
t03.c: In function ‘main’:
t03.c:4:2: error: expected expression before ‘=’ token
  = ;
  ^
t03.c:5:2: error: expected expression before ‘=’ token
  = ;
  ^
t03.c:6:16: error: ‘a’ undeclared (first use in this function)
 printf("%d\n", a);
                ^
t03.c:6:16: note: each undeclared identifier is reported only once for each function it appears in
t03.c:7:8: error: expected expression before ‘<=’ token
 if( -  <= 0){
        ^
t03.c:8:2: error: expected expression before ‘=’ token
  = ;
  ^
t03.c:9:2: error: expected expression before ‘=’ token
  = ;
  ^
t03.c:11:8: error: expected expression before ‘<=’ token
 if( -  <= 0){
        ^
t03.c:12:2: error: expected expression before ‘=’ token
  = ;
  ^
t03.c:13:2: error: expected expression before ‘=’ token
  = ;
  ^
t03.c:15:8: error: expected expression before ‘<=’ token
 if( -  <= 0){
        ^
t03.c:16:2: error: expected expression before ‘=’ token
  = ;
  ^
t03.c:17:2: error: expected expression before ‘=’ token
  = ;
  ^
t03.c:21:16: error: ‘afour’ undeclared (first use in this function)
 printf("%d\n", afour);
                ^
